Fix stylin' on small screens

--- a/docs/style.css
+++ b/docs/style.css
@@ -17,6 +17,20 @@ body {
   box-shadow: 0 0 3px rgba(255,128,128,0.5);
 }
 
+@media only screen and (max-width: 600px) {
+  html {
+      background: white;
+  }
+
+  body {
+      margin: 0;
+      border: 0;
+      border-radius: 0;
+      margin: 0;
+      box-shadow: none;
+  }
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
   line-height:100%;
